# agui

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/events/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h
src/gui/platform/: SDLSupport.cpp  SDLSupport.h
src/gui/structures/: Color.cpp  Color.h  Rect.h  Vector.h
src/gui/widgets/: Application.cpp  Application.h  Widget.cpp  Widget.h
test/: CMakeLists.txt  main.cpp
